Add mvp.css, create basic framework for questions+answers, fill out landing page

--- a/practice.html
+++ b/practice.html
@@ -37,8 +37,13 @@
   <main>
     <h1>Really Learn JavaScript</h1>
     <p>Finally, a 100% free resource designed to <u>really</u> help you learn JavaScript.</p>
-    <button>
-      Get Started →
+    <div id="questionBox"></div>
+    <div id="answerBox"></div>
+    <button id="previous">
+      Previous
+    </button>
+    <button id="next">
+      Next
     </button>
   </main>
   <footer>
