Revise navbar, add logo, fix file location for questioner script

--- a/index.html
+++ b/index.html
@@ -26,28 +26,30 @@
 <body>
   <header>
     <nav>
-      <span id="title">Script Schule</span>
+      <a href="index.html">
+        <img alt="Logo" src="img/schule-backpack.png" height="25">
+        ScriptSchule
+      </a>
       <ul>
-        <li>Learn</li>
-        <li>Practice</li>
-        <li>About</li>
+        <li><a href="learn.html">Learn</a></li>
+        <li><a href="practice.html">Practice</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <h1>Really Learn JavaScript</h1>
     <p>Finally, a 100% free resource designed to <u>really</u> help you learn JavaScript.</p>
-    <button>
-      Get Started →
-    </button>
+    <a href="practice.html">
+      <b>Get Started →</b>
+    </a>
   </main>
   <footer>
-
   </footer>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/questioner.js"></script>
+
 </body>
 
 </html>
