--- a/practice.html
+++ b/practice.html
@@ -26,17 +26,20 @@
 <body>
   <header>
     <nav>
-      <span id="title">Script Schule</span>
-      <ul>
-        <li>Learn</li>
-        <li>Practice</li>
-        <li>About</li>
-      </ul>
-    </nav>
+        <a href="index.html">
+          <img alt="Logo" src="img/schule-backpack.png" height="25">
+          ScriptSchule
+        </a>
+        <ul>
+          <li><a href="learn.html">Learn</a></li>
+          <li><a href="practice.html">Practice</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
   </header>
   <main>
-    <h1>Really Learn JavaScript</h1>
-    <p>Finally, a 100% free resource designed to <u>really</u> help you learn JavaScript.</p>
+    <h1>Test Your Memory</h1>
+    <p>Spaced repetition will help you remember.  Use this tool to test yourself!</p>
     <div id="questionBox"></div>
     <div id="answerBox"></div>
     <button id="previous">
