Add levenshtein script, tweak mvp footer, update basic html boilerplate

--- a/practice.html
+++ b/practice.html
@@ -40,8 +40,10 @@
   <main>
     <h1>Test Your Memory</h1>
     <p>Spaced repetition will help you remember.  Use this tool to test yourself!</p>
+    <h2>Question</h2>
     <div id="questionBox"></div>
-    <div id="answerBox"></div>
+    <h2>Your Answer</h2>
+    <textarea id="answerBox" cols="40" rows="5"></textarea>
     <button id="previous">
       Previous
     </button>
