--- a/practice.html
+++ b/practice.html
@@ -44,11 +44,14 @@
     <div id="questionBox"></div>
     <h2>Your Answer</h2>
     <textarea id="answerBox" cols="40" rows="5"></textarea>
+    <p>
+        <sup id="result"></sup>
+    </p>
     <button id="previous">
       Previous
     </button>
-    <button id="next">
-      Next
+    <button id="next" onclick="checkAnswer();">
+      Submit Answer
     </button>
   </main>
   <footer>
