Change title, modify menu, fill out about page and add snippets page

--- a/about.html
+++ b/about.html
@@ -39,11 +39,14 @@
     </nav>
   </header>
   <main>
-    <h1>Really Learn JavaScript</h1>
-    <p>Finally, a 100% free resource designed to <u>really</u> help you learn JavaScript.</p>
-    <a href="practice.html">
-      <b>Get Started →</b>
-    </a>
+    <h1>What is Script Schule?</h1>
+    <p>There's a thousand resources in the world to learn JavaScript, but not many that provide you interactive tools to really retain it.</p>
+    <p>Script Schule features a set of tools you can use to brush up on your modern JavaScript by:</p>
+    <ul>
+      <li>Building your memory with our interactive trainer</li>
+      <li>Solving code problems in different domains</li>
+      <li>Coding along by typing ahead of a solution</li>
+    </ul>
   </main>
   <footer>
   </footer>
