--- a/learn.html
+++ b/learn.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/mvp.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,19 +28,30 @@
   <header>
     <nav>
         <a href="index.html">
-          <img alt="Logo" src="img/schule-backpack.png" height="25">
-          ScriptSchule
+          Script<img alt="school backpack" src="img/schule-backpack.png" height="25">
         </a>
         <ul>
           <li><a href="learn.html">Learn</a></li>
           <li><a href="practice.html">Practice</a></li>
+          <li><a href="snippets.html">Snippets</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
   </header>
   <main>
-    <h1>Learn from Scratch</h1>
-    <p>This single page tutorial will teach you the basics of JavaScript.</p>
+    <h1>Learn JavaScript</h1>
+    <p>This single page tutorial will some day teach you the basics of JavaScript in a minimalist and straightforward way.</p>
+    <p>Until it's ready, we highly recommend you checkout the following resources.</p>
+    <h2>For Beginners</h2>
+    <p>
+      Chris Ferdinandi's <a href="https://vanillajsacademy.com/">Vanilla JavaScript Academy</a>.
+      You learn best by working at hands-on projects in a safe peer group where you can ask questions. Mr. Ferdinandi's program provides exactly that.
+      If you're serious about learning JavaScript, you should enroll in his next session!  
+    </p>
+    <h2>For Self-Learners</h2>
+    <p>Want to do a self-paced walkthrough of the language?  Checkout <a href="https://javascript.info/">The Modern JavaScript Tutorial</a>.</p>
+    <h2>For Knowledge Seekers</h2>
+    <p>Looking for reference?  It's hard to beat <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Mozilla's JavaScript reference.</a></p>
   </main>
   <footer>
 
