--- a/snippets.html
+++ b/snippets.html
@@ -39,11 +39,9 @@
     </nav>
   </header>
   <main>
-    <h1>Really Learn JavaScript</h1>
-    <p>Finally, a 100% free resource designed to <u>really</u> help you learn JavaScript.</p>
-    <a href="practice.html">
-      <b>Get Started →</b>
-    </a>
+    <h1>Snippets</h1>
+    <p>Helpful JavaScript snippets.</p>
+
   </main>
   <footer>
   </footer>
