--- a/practice.html
+++ b/practice.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/mvp.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,12 +28,12 @@
   <header>
     <nav>
         <a href="index.html">
-          <img alt="Logo" src="img/schule-backpack.png" height="25">
-          ScriptSchule
+          Script<img alt="school backpack" src="img/schule-backpack.png" height="25">
         </a>
         <ul>
           <li><a href="learn.html">Learn</a></li>
           <li><a href="practice.html">Practice</a></li>
+          <li><a href="snippets.html">Snippets</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
