Update practice menu to support three main learning tools and add more detail to about page

--- a/about.html
+++ b/about.html
@@ -32,7 +32,14 @@
       </a>
       <ul>
         <li><a href="learn.html">Learn</a></li>
-        <li><a href="practice.html">Practice</a></li>
+        <li>
+          <a href="practice.html">Practice</a>
+          <ul>
+            <li>Building Memory</li>
+            <li>Solving Problems</li>
+            <li>Writing JavaScript</li>
+          </ul>
+        </li>
         <li><a href="snippets.html">Snippets</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
@@ -46,6 +53,12 @@
       <li>Building your memory with our interactive trainer</li>
       <li>Solving code problems in different domains</li>
       <li>Coding along by typing ahead of a solution</li>
+    </ul>
+    <p>It's the final piece in the trifecta of web technologies covered by three different websites:</p>
+    <ul>
+      <li><a href="https://html.haus">HTML.Haus</a>, a free resource to teach you Hyper Text Markup Language</li>
+      <li><a href="https://css.city">CSS.City</a>, a collection of strategies for using Cascading Style Sheets</li>
+      <li><a href="https://script.schule">Script.Schule</a>, a practicing ground for really learning JavaScript</li>
     </ul>
   </main>
   <footer>
