--- a/practice.html
+++ b/practice.html
@@ -32,7 +32,14 @@
         </a>
         <ul>
           <li><a href="learn.html">Learn</a></li>
-          <li><a href="practice.html">Practice</a></li>
+          <li>
+            <a href="practice.html">Practice</a>
+            <ul>
+              <li>Building Memory</li>
+              <li>Solving Problems</li>
+              <li>Coding JavaScript</li>
+            </ul>
+          </li>
           <li><a href="snippets.html">Snippets</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
