Add technology used section to about page

--- a/about.html
+++ b/about.html
@@ -54,12 +54,16 @@
       <li>Solving code problems in different domains</li>
       <li>Coding along by typing ahead of a solution</li>
     </ul>
+    <h2>Bigger Picture</h2>
     <p>It's the final piece in the trifecta of web technologies covered by three different websites:</p>
     <ul>
       <li><a href="https://html.haus">HTML.Haus</a>, a free resource to teach you Hyper Text Markup Language</li>
       <li><a href="https://css.city">CSS.City</a>, a collection of strategies for using Cascading Style Sheets</li>
       <li><a href="https://script.schule">Script.Schule</a>, a practicing ground for really learning JavaScript</li>
     </ul>
+    <h2>Technology Used</h2>
+    <p>This site proudly leverages the <a href="https://html5boilerplate.com/">HTML5Boilerplate</a> and <a href="https://andybrewer.github.io/mvp/">MVP.CSS</a> projects for sane defaults.</p>
+    <p>It is written in entirely vanilla JavaScript, because you probably don't need a JavaScript frontend framework.</p>
   </main>
   <footer>
   </footer>
