--- a/about.html
+++ b/about.html
@@ -47,11 +47,11 @@
   </header>
   <main>
     <h1>What is Script Schule?</h1>
-    <p>There's a thousand resources in the world to learn JavaScript, but not many that provide you interactive tools to really retain it.</p>
-    <p>Script Schule features a set of tools you can use to brush up on your modern JavaScript by:</p>
+    <p>There are a thousand resources to learn JavaScript, but not many provide you interactive tools to really retain it.</p>
+    <p>Script Schule gives you a set of tools to practice modern JavaScript by:</p>
     <ul>
-      <li>Building your memory with our interactive trainer</li>
-      <li>Solving code problems in different domains</li>
+      <li>Building your memory with spaced repetition</li>
+      <li>Solving problems in different domains</li>
       <li>Coding along by typing ahead of a solution</li>
     </ul>
     <h2>Bigger Picture</h2>
