--- a/practice.html
+++ b/practice.html
@@ -37,7 +37,7 @@
             <ul>
               <li>Building Memory</li>
               <li>Solving Problems</li>
-              <li>Coding JavaScript</li>
+              <li>Writing JavaScript</li>
             </ul>
           </li>
           <li><a href="snippets.html">Snippets</a></li>
