Add basic logic to recognize correctness and load next question

--- a/practice.html
+++ b/practice.html
@@ -50,10 +50,10 @@
     <p>Spaced repetition will help you remember.  Use this tool to test yourself!</p>
     <h2>Question</h2>
     <div id="questionBox"></div>
-    <h2>Your Answer</h2>
+    <h2>Your Answer<sup class="hidden" id="result"></sup></h2>
     <textarea id="answerBox" cols="40" rows="5"></textarea>
     <p>
-        <sup id="result"></sup>
+        
     </p>
     <button id="previous">
       Previous
