Add about image, copy edits, small tweaks to content

--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
       <li>Solving problems in different domains</li>
       <li>Coding along by typing ahead of a solution</li>
     </ul>
+    <img alt="teacher in front of blackboard" src="img/undraw_teaching_f1cm.svg" height="150">
     <h2>Bigger Picture</h2>
     <p>It's the final piece in the trifecta of web technologies covered by three different websites:</p>
     <ul>
@@ -61,9 +62,10 @@
       <li><a href="https://css.city">CSS.City</a>, a collection of strategies for using Cascading Style Sheets</li>
       <li><a href="https://script.schule">Script.Schule</a>, a practicing ground for really learning JavaScript</li>
     </ul>
-    <h2>Technology Used</h2>
-    <p>This site proudly leverages the <a href="https://html5boilerplate.com/">HTML5Boilerplate</a> and <a href="https://andybrewer.github.io/mvp/">MVP.CSS</a> projects for sane defaults.</p>
-    <p>It is written in entirely vanilla JavaScript, because you probably don't need a JavaScript frontend framework.</p>
+    <h2>Credits</h2>
+    <p>Starter code provided by the <a href="https://html5boilerplate.com/">HTML5Boilerplate</a> and <a href="https://andybrewer.github.io/mvp/">MVP.CSS</a> projects for sane defaults.</p>
+    <p>Illustrations provided by <a href="https://undraw.co/">unDraw</a>.</p>
+    <p>Script.Schule is written entirely in vanilla JavaScript, because you probably don't need a JavaScript frontend framework.</p>
   </main>
   <footer>
   </footer>
