--- a/practice.html
+++ b/practice.html
@@ -48,14 +48,14 @@
   <main>
     <h1>Practice</h1>
     <p>
-      Learning to program is not about reading tutorials, watching videos, or listening to lectures.  You really learn to program by taking knowledge and appliyng it
-      through rigorous practice.  That means memorization coupled with real problem solving is retained via practice.
+      Learning to program is not about reading tutorials, watching videos, or listening to lectures.  You really learn to program by actually programming.
+      You have to code.  You have to practice.  
     </p>
     <hr>
     <section>
       <header>
         <h2>Learn through Doing</h2>
-        <p>Three different ways to sharpen your JavaScript sword and retain your programming knowledge.</p>
+        <p>We offer three different ways to sharpen your JavaScript sword.</p>
       </header>
       <aside>
         <img alt="programmer with flash cards whirling around their head" src="img/undraw_Memory_storage_reh0.svg" height="150">
@@ -67,10 +67,10 @@
       </aside>
       <aside>
         <img alt="programmer thinking about a problem" src="img/undraw_code_thinking_1jeh.svg" height="150">
-        <h3>Solve Hard Problems</h3>
+        <h3>Learn Solutioning</h3>
         <p>Critical thinking skills arise from solving real problems.  Grow through solving coding challenges.</p>
         <p>
-          <a href="practice-building-memory.html"><em>Solve Problems</em></a>
+          <a href="#"><em>Solve Problems<sup>coming soon</sup></em></a>
         </p>
       </aside>
       <aside>
@@ -78,7 +78,7 @@
         <h3>Write Real Code</h3>
         <p>Get in the flow by typing out code to common JavaScript functions, creating muscle memory.</p>
         <p>
-          <a href="practice-building-memory.html"><em>Write Code</em></a>
+          <a disabled href="#"><em>Write Code<sup>coming soon</sup></em></a>
         </p>
       </aside>
     </section>
