--- a/resources.html
+++ b/resources.html
@@ -40,6 +40,7 @@
             <li>Writing JavaScript</li>
           </ul>
         </li>
+        <li><a href="resources.html">Resources</a></li>
         <li><a href="snippets.html">Snippets</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
@@ -49,7 +50,7 @@
     <h1>Resources</h1>
     <p>A list of other resources for JavaScript skill acquisition.</p>
     <ul>
-        <li><a href="https://htmldom.dev/">HTML DOM - how do you manage the HTML DOM with only vanilla JavaScript?</a></li>
+        <li><a href="https://htmldom.dev/">HTML DOM</a>, examples demonstrating how to manipulate the DOM with vanilla JavaScript</li>
     </ul>
 
   </main>
