--- a/practice.html
+++ b/practice.html
@@ -40,6 +40,7 @@
               <li>Writing JavaScript</li>
             </ul>
           </li>
+          <li><a href="resources.html">Resources</a></li>
           <li><a href="snippets.html">Snippets</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
