Add two new resources to Resources page

--- a/resources.html
+++ b/resources.html
@@ -51,6 +51,8 @@
     <p>A list of other resources for JavaScript skill acquisition.</p>
     <ul>
         <li><a href="https://htmldom.dev/">HTML DOM</a>, examples demonstrating how to manipulate the DOM with vanilla JavaScript</li>
+        <li><a href="https://1loc.dev/">1 LOC</a>, JavaScript utilities written in a single line of code</li>
+        <li><a href="https://vanillajstoolkit.com/">Vanilla JS Toolkit</a>, collection of methods, helper functions, plugins, boilerplates, and polyfills</li>
     </ul>
 
   </main>
