Add hover styling for easy, medium, and hard difficulty radio buttons

--- a/practice-building-memory.html
+++ b/practice-building-memory.html
@@ -57,9 +57,9 @@
 
           </span>
           <div class="difficulty">
-            <label><input type="radio" />Easy</label>
-            <label><input type="radio" />Medium</label>
-            <label class="selected" ><input type="radio" />Hard</label>
+            <label id="easy"><input type="radio" />Easy</label>
+            <label id="medium"><input type="radio" />Medium</label>
+            <label id="hard"><input type="radio" />Hard</label>
           </div>
         </div>
       </div>
