Add WIP of card flipper

--- a/practice-building-memory.html
+++ b/practice-building-memory.html
@@ -47,15 +47,13 @@
     </nav>
   </header>
   <main>
-    <h1>Test Your Memory</h1>
+    <h1>Practice Building Memory</h1>
     <p>Spaced repetition will help you remember. Use this tool to test yourself!</p>
     <div class="scene">
       <div class="card">
         <div class="card__face card__face--front" id="questionBox">front</div>
         <div class="card__face card__face--back">
-          <span id="answerBox">
-
-          </span>
+          <span id="answerBox"></span>
           <div class="difficulty">
             <label id="easy"><input type="radio" />Easy</label>
             <label id="medium"><input type="radio" />Medium</label>
@@ -64,11 +62,7 @@
         </div>
       </div>
     </div>
-    <section class="scene">
-      <aside class="card">
 
-      </aside>
-    </section>
     <h2>Question</h2>
     <div id="questionBox"></div>
     <h2>Your Answer<sup class="hidden" id="result"></sup></h2>
