WIP of loading JSON data for questions into DOM

--- a/practice-building-memory.html
+++ b/practice-building-memory.html
@@ -51,7 +51,7 @@
     <p>Spaced repetition will help you remember. Use this tool to test yourself!</p>
     <div class="scene">
       <div class="card">
-        <div class="card__face card__face--front" id="questionBox">front</div>
+        <div class="card__face card__face--front" id="questionBox">Loading...</div>
         <div class="card__face card__face--back">
           <span id="answerBox"></span>
           <div class="difficulty">
@@ -76,7 +76,7 @@
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/questioner.js"></script>
+  <script src="js/memorizer.js"></script>
 </body>
 
 </html>
