--- a/practice-building-memory.html
+++ b/practice-building-memory.html
@@ -66,9 +66,8 @@
   <footer>
 
   </footer>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <!-- <script src="js/vendor/modernizr-3.11.2.min.js"></script> -->
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
   <script src="js/memorizer.js"></script>
 </body>
 
