Add collection of additional games

--- a/practice.html
+++ b/practice.html
@@ -27,30 +27,30 @@
 <body>
   <header>
     <nav>
-        <a href="index.html">
-          Script<img alt="school backpack" src="img/schule-backpack.png" height="25">
-        </a>
-        <ul>
-          <li><a href="learn.html">Learn</a></li>
-          <li>
-            <a href="practice.html">Practice</a>
-            <ul>
-              <li>Building Memory</li>
-              <li>Solving Problems</li>
-              <li>Writing JavaScript</li>
-            </ul>
-          </li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="snippets.html">Snippets</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </nav>
+      <a href="index.html">
+        Script<img alt="school backpack" src="img/schule-backpack.png" height="25">
+      </a>
+      <ul>
+        <li><a href="learn.html">Learn</a></li>
+        <li>
+          <a href="practice.html">Practice</a>
+          <ul>
+            <li>Building Memory</li>
+            <li>Solving Problems</li>
+            <li>Writing JavaScript</li>
+          </ul>
+        </li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="snippets.html">Snippets</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <h1>Practice</h1>
     <p>
-      Learning to program is not about reading tutorials, watching videos, or listening to lectures.  You really learn to program by actually programming.
-      You have to code.  You have to practice.  
+      Learning to program is not about reading tutorials, watching videos, or listening to lectures. You really learn to
+      program by coding.
     </p>
     <hr>
     <section>
@@ -59,9 +59,11 @@
         <p>We offer three different ways to sharpen your JavaScript sword.</p>
       </header>
       <aside>
-        <img alt="programmer with flash cards whirling around their head" src="img/undraw_Memory_storage_reh0.svg" height="150">
+        <img alt="programmer with flash cards whirling around their head" src="img/undraw_Memory_storage_reh0.svg"
+          height="150">
         <h3>Memorize Functions</h3>
-        <p>There's great power in raw knowledge.  Commit critical code to memory by playing our spaced repetition game.</p>
+        <p>There's great power in raw knowledge. Commit critical code to memory by playing our spaced repetition game.
+        </p>
         <p>
           <a href="practice-building-memory.html"><em>Build Memory</em></a>
         </p>
@@ -69,7 +71,7 @@
       <aside>
         <img alt="programmer thinking about a problem" src="img/undraw_code_thinking_1jeh.svg" height="150">
         <h3>Learn Solutioning</h3>
-        <p>Critical thinking skills arise from solving real problems.  Grow through solving coding challenges.</p>
+        <p>Critical thinking skills arise from solving real problems. Grow through solving coding challenges.</p>
         <p>
           <a href="#"><em>Solve Problems<sup>coming soon</sup></em></a>
         </p>
@@ -83,6 +85,29 @@
         </p>
       </aside>
     </section>
+    <hr>
+    <article>
+      <h2>Want more games?</h2>
+
+      <p>Try out these fan favorites:</p>
+      <h3>Beginner</h3>
+      <ul>
+        <li><a href="https://www.jschallenger.com/">JSchallenger</a>, complete challenges to learn</li>
+        <li><a href="https://lab.reaal.me/jsrobot/">JSRobot</a>, move a robot to learn JavaScript</li>
+      </ul>
+      <h3>Specific Study</h3>
+      <ul>
+        <li><a href="https://play.elevatorsaga.com/">Elevator Saga</a>, will teach you API interaction</li>
+        <li><a href="https://bevacqua.github.io/promisees/">Promisees</a>, will teach you Promises</li>
+        <li><a href="https://serviceworkies.com/">Service Workies</a>, will teach you Service Workers</li>
+      </ul>
+      <h3>Advanced</h3>
+      <ul>
+        <li><a href="https://designpatternsgame.com/">Design Patterns</a>, learn the famous "Gang of Four"</li>
+        <li><a href="https://screeps.com/">Screeps</a>, program units in an MMO sandbox</li>
+        <li><a href="https://alexnisnevich.github.io/untrusted/">Untrusted</a>, can you escape this maze of code?</li>
+      </ul>
+    </article>
   </main>
   <footer>
 
