--- a/resources.html
+++ b/resources.html
@@ -53,6 +53,7 @@
         <li><a href="https://htmldom.dev/">HTML DOM</a>, examples demonstrating how to manipulate the DOM with vanilla JavaScript</li>
         <li><a href="https://1loc.dev/">1 LOC</a>, JavaScript utilities written in a single line of code</li>
         <li><a href="https://vanillajstoolkit.com/">Vanilla JS Toolkit</a>, collection of methods, helper functions, plugins, boilerplates, and polyfills</li>
+        <li><a href="https://jakearchibald.com/2021/cors/">How to Win at CORS</a></li>
     </ul>
 
   </main>
