--- a/resources.html
+++ b/resources.html
@@ -54,7 +54,11 @@
         <li><a href="https://1loc.dev/">1 LOC</a>, JavaScript utilities written in a single line of code</li>
         <li><a href="https://vanillajstoolkit.com/">Vanilla JS Toolkit</a>, collection of methods, helper functions, plugins, boilerplates, and polyfills</li>
     </ul>
-
+    <h2>Web Components</h2>
+    <p>Vanilla or vanilla-ish web components.</p>
+    <ul>
+      <li><a href="https://shoelace.style/">Shoelace</a></li>
+    </ul>
   </main>
   <footer>
   </footer>
