--- a/resources.html
+++ b/resources.html
@@ -41,7 +41,6 @@
           </ul>
         </li>
         <li><a href="resources.html">Resources</a></li>
-        <li><a href="snippets.html">Snippets</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
@@ -55,7 +54,11 @@
         <li><a href="https://vanillajstoolkit.com/">Vanilla JS Toolkit</a>, collection of methods, helper functions, plugins, boilerplates, and polyfills</li>
         <li><a href="https://jakearchibald.com/2021/cors/">How to Win at CORS</a></li>
     </ul>
-
+    <h2>Web Components</h2>
+    <p>Vanilla or vanilla-ish web components.</p>
+    <ul>
+      <li><a href="https://shoelace.style/">Shoelace</a></li>
+    </ul>
   </main>
   <footer>
   </footer>
