Add card flipper (#14)
* Basic card flipper created as work in progress

* Add hover styling for easy, medium, and hard difficulty radio buttons

* Add WIP of card flipper

* Breakout memorizer as separate file from questioner

* WIP of loading JSON data for questions into DOM

* WIP of loading questions and next test date from local storage

* Update styles for better UX on card hover, remove unnecessary buttons

* Basic WIP working for loading data, going to next question

* Fix event delegation bug and animation oddity

* Add collection of additional games

* Add Shoelace to resources page

* Remove snippets link from all pages

* Fix broken links to custom domains, now pointing at phuoc.ng domain

--- a/resources.html
+++ b/resources.html
@@ -49,8 +49,8 @@
     <h1>Resources</h1>
     <p>A list of other resources for JavaScript skill acquisition.</p>
     <ul>
-        <li><a href="https://htmldom.dev/">HTML DOM</a>, examples demonstrating how to manipulate the DOM with vanilla JavaScript</li>
-        <li><a href="https://1loc.dev/">1 LOC</a>, JavaScript utilities written in a single line of code</li>
+        <li><a href="https://phuoc.ng/collection/html-dom/">HTML DOM</a>, examples demonstrating how to manipulate the DOM with vanilla JavaScript</li>
+        <li><a href="https://phuoc.ng/collection/1-loc/">1 LOC</a>, JavaScript utilities written in a single line of code</li>
         <li><a href="https://vanillajstoolkit.com/">Vanilla JS Toolkit</a>, collection of methods, helper functions, plugins, boilerplates, and polyfills</li>
         <li><a href="https://jakearchibald.com/2021/cors/">How to Win at CORS</a></li>
     </ul>
