Add NPMS.io and Moiva.io to resources

--- a/resources.html
+++ b/resources.html
@@ -54,6 +54,12 @@
         <li><a href="https://vanillajstoolkit.com/">Vanilla JS Toolkit</a>, collection of methods, helper functions, plugins, boilerplates, and polyfills</li>
         <li><a href="https://jakearchibald.com/2021/cors/">How to Win at CORS</a></li>
     </ul>
+    <h2>Dependencies</h2>
+    <p>Writing maintainable JavaScript is about understanding the quality of your dependencies.</p>
+    <ul>
+      <li><a href="https://npms.io/">npms.io</a>, a better and open source search for node packages</li>
+      <li><a href="https://moiva.io/">Moiva</a>, evaluate and compare NPM packages</li>
+    </ul>
     <h2>Web Components</h2>
     <p>Vanilla or vanilla-ish web components.</p>
     <ul>
